--- a/assets/index.html
+++ b/assets/index.html
@@ -6,5 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
   <body>
+    <img src="admin-tool.png" />
   </body>
 </html>
